--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceRoot}/build/CacheSimulator",
-        "args": ["-t","/Users/lianyunrui/Desktop/Study/College-Project/3_2/Computer-Architecture/Lab/Lab_4/project/traces/ls.trace", "-c", "/Users/lianyunrui/Desktop/Study/College-Project/3_2/Computer-Architecture/Lab/Lab_4/project/confs/32B-full-128KB-lru-70-wb-wa.txt"],
+        "args": ["-t","${workspaceRoot}/traces/ls.trace", "-c", "${workspaceRoot}/confs/8B-2way-8KB-lru-50-wb-wa.txt"],
         "stopAtEntry": true,
         "cwd": "${fileDirname}",
         "environment": [],
